test/netlist/error/used-unused.bop
A(a) = c
with unused = b
where
  b = not(a);
  c = id(b);
end where;
